Responsive and stripe add

--- a/src/display/header/header.css
+++ b/src/display/header/header.css
@@ -2,86 +2,35 @@
     position: fixed;
     left: 0;
     top:0;
-    background-color: rgb(57, 53, 53);
-    width:400px;
+    padding-top: 100px;
+    background-color: rgb(255, 255, 255);
     height: 100vh;
     text-align: center;
     border-radius: 5px;
     z-index: 1;
+    width: 100%;
 }
 .displayOff{
     display: none;
 }
-.bi-x{
-    width: 70px;
-    height: 70px;
-    position: absolute;
-    right: 0px;
-    color: white;
-    z-index: 1;
-}
 .sideBarInfo{
+    
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    margin: 100px;
-}
-.sideBarInfo a{
-    color: white;
-    text-decoration: none;
-}
-.sideBarInfo li{
-    margin: 20px;
-    padding: 20px;
-}
-.relative{
-    position: relative;
-    width: 100%;
-    height: 60px;
-}
-.headerContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: lightgray;
-    margin: 0;
-   padding: 0;
-   position: fixed;
-   width: 100%;
-}
-.headerContainer a{
-    text-decoration: none;
-    padding: 5px;
-    color: black;
-}
-.sideBarContainer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 5px;
-}
-.shopNameContainer {
-    text-align: center;
-}
-.shopName{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 100;
-}
-.profileAndCartContainer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 5px;
-}
-li{
-    list-style: none;
-    margin-bottom: 0;
 }
 
-.bi-person-circle,.bi-bag-fill,.bi-list{
-    width: 25px;
-    height: 25px;
+@media(max-width:755px){
+    .navContainer{
+        
+    }
+    .res_disable{
+        display: none;
+    }
+}
+@media(min-width:755px){
+    .toggle{
+       display: none;
+    }
 }
