--- a/src/display/cart/cart.css
+++ b/src/display/cart/cart.css
@@ -1,54 +1,22 @@
-
-.itemDescription{
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-    align-items: center;
+@media(max-width:395px){
+    .res_photo{
+        width: 100%;
+        height: 100%;
+    }
+    .responsive_cart{
+        display: flex;
+        margin: 1px;
+    }
 }
-.itemDescription button{
-    background-color: #554f4f;
-    color: white;
-}
-.cart{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    border-bottom: 1px solid lightblue;
-}
-.itemQuantityContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.cartPrice{
-    width: 50px;
-    text-align: center;
-    color: green;
-}
-.quantity{
-    width: 100px;
-    text-align: center;
-    height: 30px;
-}
-.itemQuantityContainer button{
-    width: 50px;
-    height: 20px;
-}
-.totalPrice{
-    color: green;
-}
-.subtotal{
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-}
-.subtotal h1{
-    color: green;
-}
-.paidBut{
-    background-color: rgb(128, 207, 128);
-    width: 200px;
+@media(min-width:395px){
+    .res_photo{
+        width: 25%;
+        height: 25%;
+    }
+    .responsive_cart{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
